5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1724_2525.log
== TEST (2019-05-14 10:18:14) 
-- CODE:
num=int(input("digite um numero: "))
i=1
soma=1
while(d<=num):
	num=int(input("digite um numero: "))
	soma=soma+num/i
	i=i+1
print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(d<=num):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:34) 
-- CODE:
num=int(input("digite um numero: "))
i=1
soma=1
while(i<=num):
	num=int(input("digite um numero: "))
	soma=soma+num/i
	i=i+1
print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:52) 
-- CODE:

i=1
soma=1
while(i<=num):
	num=int(input("digite um numero: "))
	soma=soma+num/i
	i=i+1
print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(i<=num):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:19:44) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(i<=num):
	soma=soma+num/i
	i=i+1
print(soma)
	
	
-- OUTPUT:
38.238528138528146
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:29) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(i<=num):
	soma=soma+num/i
	i=i+1
	num=int(input("digite um numero: "))
	
print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:23:54) 
-- CODE:
i=1
soma=1
#num=int(input("digite um numero: "))
while(i<=num):
	num=int(input("digite um numero: "))
	soma=soma+num/i
	i=i+1
	print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(i<=num):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:25:18) 
-- CODE:
i=1
soma=1
#num=int(input("digite um numero: "))
while(i>=0):
	num=int(input("digite um numero: "))
	soma=soma+num/i
	i=i+1
print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:46) 
-- CODE:
i=1
soma=0
num=int(input("digite um numero: "))
while(num>i):
	soma=soma+num/i
		i=i+1
	num=int(input("digite um numero: "))
	i=i+1
	
print(i)

print(soma)
	
	
-- ERROR:
File "XXXX", line 6
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:53) 
-- CODE:
i=1
soma=0
num=int(input("digite um numero: "))
while(num>i):
	soma=soma+num/i
	i=i+1
	num=int(input("digite um numero: "))
	i=i+1
	
print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:13) 
-- CODE:
i=1
soma=0
num=int(input("digite um numero: "))
while(num>i):
	soma=soma+num/i
	i=i+1
	num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:36) 
-- CODE:
i=1
soma=0
#num=int(input("digite um numero: "))
while(num>i):
	soma=soma+num/i
	i=i+1
	num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(num>i):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:49) 
-- CODE:
i=1
soma=0
num=int(input("digite um numero: "))
while(num>i):
	soma=soma+num/i
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- OUTPUT:
12
36.238528138528146
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:03) 
-- CODE:
i=0
soma=0
num=int(input("digite um numero: "))
while(num>i):
	soma=soma+num/i
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+num/i
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:37:36) 
-- CODE:
i=0
soma=1
num=int(input("digite um numero: "))
while(num>i):
	soma=soma+num/i-1
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+num/i-1
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:42:25) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num>0):
	soma=soma+num/num+i
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+num/i-1
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:43:01) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num%i=o):
	soma=soma+num/num+i
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- ERROR:
File "XXXX", line 4
    while(num%i=o):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:10) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num-num==0):
	soma=soma+num/num+i
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- ERROR:
File "XXXX", line 4
    while(num%i=o):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:38) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num-num==0):
	soma=soma+num/num+i
	i=i+1
	num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:32) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num-num!=0):
	soma=soma+num/num+i
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(i)

print(soma)
	
	
-- OUTPUT:
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:49) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num-num!=0):
	soma=soma+num/num+i
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(soma)

print(i,"divisores")
	
	
-- OUTPUT:
1
1 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:16) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num-num=!0):
	soma=soma+num/num+i
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(soma)

print(i,"divisores")
	
	
-- ERROR:
File "XXXX", line 4
    while(num-num=!0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:02) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num-num!=0):
	soma=soma+(num/(num+i))
	i=i+1
	#num=int(input("digite um numero: "))
	
	
print(soma)

print(i,"divisores")
	
	
-- OUTPUT:
1
1 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:51) 
-- CODE:
i=1
soma=1
num=int(input("digite um numero: "))
while(num-num!=0):
	soma=soma+(num/(num+i))
	i=i+1
	num=int(input("digite um numero: "))
	
	
print(soma)

print(i,"divisores")
	
	
-- OUTPUT:
1
1 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:41) 
-- CODE:
i=0
soma=1
num=int(input("digite um numero: "))
while(num-num!=0):
	soma=soma+(num/(num+i))
	i=i+1
	num=int(input("digite um numero: "))
	
	
print(soma)

print(i,"divisores")
	
	
-- OUTPUT:
1
0 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:16:27) 
-- CODE:
n=int(input("digite um numero: "))
i=0
d=1
while(d<=n):
	if(n%d==0):
		print(d)
		d=d+1
	   i=i+1
	else:
		d=d+1
print(i)
	

	
	
-- ERROR:
File "XXXX", line 8
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:23) 
-- CODE:
n=int(input("digite um numero: "))
i=0
d=1
while(d<=n):
	if(n%d==0):
		print(d)
		d=d+1
	   i=i+1
	else:
		d=d+1
print(i,"divisores")
	

	
	
-- ERROR:
File "XXXX", line 8
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:59) 
-- CODE:
n=int(input("digite um numero: "))
i=0
d=1
while(d<=n):
	if((n%d)==0):
		print(d)
		d=d+1
	   i=i+1
	else:
		d=d+1
print(i,"divisores")
	

	
	
-- ERROR:
File "XXXX", line 8
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:25) 
-- CODE:
n=int(input("digite um numero: "))
i=0
d=1
while(d<=n):
	if((n%d)==0):
		print(d)
		d=d+1
		i=i+1
	else:
		d=d+1
print(i,"divisores")
	

	
	
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:18:50) 
-- CODE:
n=int(input("digite um numero: "))
i=0
d=1
while(d<=n):
	if((n%d)==0):
		print(d)
		d=d+1
		i=i+1
	else:
		d=d+1
print(i,"divisores")
	

	
	
-- EXECUTION TIME:
0.152228
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1
2
3
4
6
12
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1
7
49
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1
2
3
5
6
10
15
30
8 divisores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
